--- a/templates/about.html
+++ b/templates/about.html
@@ -59,8 +59,8 @@
 							<div class="news-single__boximg">
 								<div class="tt-item-img">
 									<picture>
-										<source srcset="/static/images/logo1.png" type="image/webp">
-										<img src="/static/images/logo1.png" alt="">
+										<source srcset="/static/images/ydmlogo1.png.png" type="image/webp">
+										<img src="/static/images/ydmlogo1.png.png" alt="">
 									</picture>
 								</div>
 								<!-- <div class="tt-img-layout">
