--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -11,7 +11,7 @@
 	<div class="tt-holder">
 		<div class="tt-col">
 			<a href="/" class="tt-logo tt-logo-alignment">
-	            <img style="height: 56px !important;" src="/static/images/logo1.png" alt="">
+	            <img style="height: 56px !important;" src="/static/images/ydmlogo1.png.png" alt="">
             </a>
 		</div>
 		<div class="tt-col tt-col tt-desctop-parent tt-wide">
