--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -12,7 +12,7 @@
 		</nav>
 		<div class="f-logo">
 			<a href="/" class="tt-logo tt-logo-alignment">
-				<img src="/static/images/logo1.png">
+				<img src="/static/images/ydmlogo1.png.png">
 			</a>
 		</div>
 		<div class="f-col">
