--- a/templates/home.html
+++ b/templates/home.html
@@ -27,8 +27,8 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/siden.png"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YDM TECH EXPO</div>
-					<div class="tt-title-02">THE ULTIMATE PLATFORM TO EXPLORE<br>AND<br>CELEBRATE TECHNOLOGY</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) <br> PRESENTS TO YOU</div>
+					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
 						<a class="tt-btn" href="/contact"><span>Contact Us</span></a>
@@ -41,8 +41,8 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/ech2.jpeg"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YDM TECH EXPO</div>
-					<div class="tt-title-02">THE ULTIMATE PLATFORM TO EXPLORE<br>AND<br>CELEBRATE TECHNOLOGY</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) <br> PRESENTS TO YOU</div>
+					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
 						<a class="tt-btn" href="/contact"><span>Contact Us</span></a>
@@ -55,8 +55,8 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/ech3.webp"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YDM TECH EXPO</div>
-					<div class="tt-title-02">THE ULTIMATE PLATFORM TO EXPLORE<br>AND<br>CELEBRATE TECHNOLOGY</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) <br> PRESENTS TO YOU</div>
+					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
 						<a class="tt-btn" href="/contact"><span>Contact Us</span></a>
@@ -95,8 +95,9 @@
 					</div>
 					<div class="tt-content-text">
 						<p class="title__text-description" style="color:black;">
-							Coming September 2023, we are bringing together the brightest minds, the latest innovations, and the most exciting trends in the world of technology. 
-							Whether you are an industry expert, an aspiring techie or just a curious enthusiast, this event is for you regardless! The objectives of this Expo are;
+							Coming September 2023, we are bringing together the brightest minds to witness as we showcase latest technologies such as 
+							"Virtuality Reality Devices, the BBC Microbit and the Maqueen Robot" amongst others. 
+							We are inviting techies to also grace the event to inspire participants and the world at large to take up careers in IT. The objectives of this Expo are;
 						</p>
 						<ul class="list-01 list-text-top" id="js-show-layout">
 							<li><a style="color:black;">To witness breathtaking technologies</a></li>
