still changing header

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,7 +55,8 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/ech3.webp"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) <br> PRESENTS TO YOU</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) </div>
+					<div class="tt-title-01"> PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
@@ -95,8 +96,7 @@
 					</div>
 					<div class="tt-content-text">
 						<p class="title__text-description" style="color:black;">
-							Coming September 2023, we are bringing together the brightest minds to witness as we showcase latest technologies such as 
-							"Virtuality Reality Devices, the BBC Microbit and the Maqueen Robot" amongst others. 
+							Coming September 2023, we are bringing together the brightest minds to witness as we showcase latest technologies such as "Virtuality Reality Devices, the BBC Microbit and the Maqueen Robot" amongst others. 
 							We are inviting techies to also grace the event to inspire participants and the world at large to take up careers in IT. The objectives of this Expo are;
 						</p>
 						<ul class="list-01 list-text-top" id="js-show-layout">
