stillll changing header

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,8 +55,7 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/ech3.webp"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) </div>
-					<div class="tt-title-01"> PRESENTS TO YOU</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
