this header dier

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/siden.png"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) <br> PRESENTS TO YOU</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
@@ -41,7 +41,7 @@
 			<div class="slide-content">
 				<div class="mainSlider-textmask" data-bgslide="/static/images/ech2.jpeg"></div>
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
-					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) <br> PRESENTS TO YOU</div>
+					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
