--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,7 @@
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
 					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
+					<div class="tt-title-02">20TH - 22ND SEPTEMBER, 2023</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
 						<a class="tt-btn" href="/contact"><span>Contact Us</span></a>
@@ -43,6 +44,7 @@
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
 					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
+					<div class="tt-title-02">20TH - 22ND SEPTEMBER, 2023</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
 						<a class="tt-btn" href="/contact"><span>Contact Us</span></a>
@@ -57,6 +59,7 @@
 				<div class="container text-center js-rotation" data-animation="fadeInUpSm" data-animation-delay="0s">
 					<div class="tt-title-01">YOUTH DISCOVERY MOVEMENT (YDM) PRESENTS TO YOU</div>
 					<div class="tt-title-02">THE YDM TECH EXPO'23</div>
+					<div class="tt-title-02">20TH - 22ND SEPTEMBER, 2023</div>
 					<div class="tt-row-btn">
 						<a class="tt-btn" href="/#event"><span>Event</span></a>
 						<a class="tt-btn" href="/contact"><span>Contact Us</span></a>
